# git-cross

./: .env  .envrc  .gitignore  .gitlab-ci.yml  .goreleaser.yaml  AGENTS.md  BUG_ANALYSIS.md  CHANGELOG.md  COMPREHENSIVE_TESTING_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Cross.example  Crossfile  Justfile  Justfile.cross  LICENSE  MR_TEMPLATE.md  README.md  SESSION_SUMMARY.md  TASK_COMPLETION_REPORT.md  TESTS.md  TODO.md  USAGE_GUIDE.md  create_mr.sh  cross  cross_fixed.sh  git-cross  git.just  implementation-plan-release.md
.github/: CICD.md
.github/workflows/: badges.yml  ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
examples/: Crossfile-001  Crossfile-002  Crossfile-003  Crossfile-004  Crossfile-005  Crossfile-006-mixed
scripts/fixture-tooling/: seed-fixtures.sh
specs/: .markdownlint.yaml
specs/001-cross-test-strategy/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
src-go/: go.mod  go.sum  main.go
src-rust/: Cargo.toml  main.rs
src-rust/src/: main.rs
test/: 001_use.sh  002_patch.sh  003_diff.sh  004_sync.sh  005_replay.sh  006_push.sh  007_status.sh  008_rust_cli.sh  009_go_cli.sh  010_worktree.sh  011_rust_push.sh  012_sparse_checkout.sh  013_real_world.sh  014_remove.sh  015_prune.sh  017_cd_wt_fix.sh  018_single_file_patch.sh  019_patch_worktree.sh  common.sh  run-all.sh  run-test.sh  test-all-implementations.sh  test_01_basic_patch.sh  test_02_sync.sh  test_all_commands.sh  test_helpers.sh  verify_examples.sh
tests/: test_comprehensive.sh  test_cross.sh
(+23 files in other folders)
